<resources>
    <string name="app_name">Beautyservices</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signup">Sign Up</string>

    <!--Mock strings-->
    <string name="lorem_ipsum_name">Lorem ipsum</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris orci diam, semper et diam in, tincidunt rutrum mauris. Maecenas vitae sagittis neque. Suspendisse in imperdiet leo</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Create an Account</string>
    <string name="action_log_in">Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Strings related to Search-->
    <string name="search_hint">Search providers</string>

    <!--Default search categories-->
    <string-array name="grid_categories">
        <item>Hair Stylists</item>
        <item>Photographers</item>
        <item>Makeup Artists</item>
        <item>Personal Trainers</item>
        <item>Massage Therapists</item>
        <item>Tattoo Artists</item>
        <item>Manicurists</item>
        <item>Barbers</item>
        <item>Eyelash Technicians</item>
    </string-array>

    <string name="category_hair_stylist">Hair Stylists</string>
    <string name="category_photographers">Photographers</string>
    <string name="category_makeup_artists">Makeup Artists</string>
    <string name="category_personal_trainers">Personal Trainers</string>
    <string name="category_massage_therapists">Massage Therapists</string>
    <string name="category_tattoo_artists">Tattoo Artists</string>
    <string name="category_manicurists">Manicurists</string>
    <string name="category_barbers">Barbers</string>
    <string name="category_eyelash_technicians">Eyelash Technicians</string>

    <string name="bb_search">Search</string>
    <string name="bb_dashboard">Dashboard</string>
    <string name="bb_profile">Profile</string>
    <string name="bb_settings">Settings</string>

    <!--Strings related to Provider details-->
    <string name="hire_me">Hire Me</string>
    <string name="write_review">Write a Review</string>
    <string name="services">Services</string>
    <string name="business_hours">Business Hours</string>
    <string name="reviews">Reviews</string>
    <string name="portfolio">Portfolio</string>
    <string name="about">About</string>
    <string name="address">Address</string>

    <string name="settings_about">About Beautyservices</string>
    <string name="settings_contact">Contact Us</string>
    <string name="settings_logout">Log out</string>
</resources>
